kubernetes/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docs-nginx
  labels:
    app: docs-nginx
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: docs-nginx
  template:
    metadata:
      labels:
        app: docs-nginx
    spec:
      containers:
      - name: docs-nginx
        image: nginx:stable-alpine3.23-slim
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 5
          successThreshold: 1
          failureThreshold: 10
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: nginx-config-volume
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
        - name: docs-storage
          mountPath: /usr/share/nginx
          subPath: html
        securityContext:
          runAsNonRoot: true
          runAsUser: 1001
          runAsGroup: 1001
          fsGroup: 1001
          fsGroupChangePolicy: "OnRootMismatch"
          seccompProfile:
            type: RuntimeDefault
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
      volumes:
      - name: nginx-config-volume
        configMap:
          name: nginx-config
      - name: docs-storage
        persistentVolumeClaim:
          claimName: docs-pvc
