kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: docs-nginx-service
spec:
  selector:
    app: docs-nginx
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
