kubernetes/traefik.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: sec-headers-docs
spec:
  headers:
    frameDeny: true
    browserXssFilter: true
    accessControlAllowMethods:
      - "GET"
    accessControlAllowHeaders:
      - "*"
    accessControlAllowOriginList:
      - "https://*.yukics.net"
      - "https://*.yuki.es"
      - "https://static.cloudflareinsights.com"
    accessControlMaxAge: 100
    addVaryHeader: true
    sslRedirect: true
    stsSeconds: 31536000
    stsIncludeSubdomains: true
    contentTypeNosniff: true
    # --- CSP y Referrer Policy ---
    customResponseHeaders:
      # # Permite scripts de tus dominios y de Cloudflare
      # Content-Security-Policy: "default-src 'self'; script-src 'self' 'unsafe-eval' https://static.cloudflareinsights.com https://*.yukics.net https://*.yukics.es https://cdn.jsdelivr.net 'sha256-AE0EQudVMDsl926YZzlYRgeKgzPan7WBWeH3xMTf9kE=' 'sha256-ToyrjEgxDDchSN6B5DAZBdYc3FmjH4tzXNfd/m7Jo08=' 'sha256-u7XfqJk/4MeesczJgatBJYG/Cy/MuY0ako1AdLPaiPI=' 'sha256-jb0Sw2NBwvsY3maDOhKeWQX0xKEVSwpUOYP+xdBsS1A=' 'sha256-LxtIciogoF9L7bvizkV5RJxWGc4gmBIqgvQ1i472vrQ=' 'sha256-JTsinhwk0yHO6G4vsBxPTTVlHaBlAehC [...]
      # # Evita filtrar información de la URL de origen a otros sitios
      # Referrer-Policy: "strict-origin-when-cross-origin"
      # Deshabilita funciones del navegador no deseadas (Cámara, Micro, etc)
      Permissions-Policy: "camera=(), microphone=(), geolocation=()"
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ratelimit-docs
spec:
  rateLimit:
    average: 20
    period: 1s
    burst: 40
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: inflightreq-docs
spec:
  inFlightReq:
    amount: 10
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: docs-ingressroute-websecure
spec:
  entryPoints:
    - websecure
  tls:
    certResolver: letsencrypt
  routes:
  - kind: Rule
    middlewares:
      - name: ratelimit-docs
      - name: inflightreq-docs
      - name: sec-headers-docs
    match: Host(`docs.yukics.net`) || Host(`docs.yuki.es`)
    services:
    - kind: Service
      name: docs-nginx-service
      namespace: docs
      passHostHeader: true
      port: 8080
    observability:
      accessLogs: true
      traceVerbosity: minimal
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: docs-ingressroute-web
spec:
  entryPoints:
    - web
  routes:
  - kind: Rule
    middlewares:
      - name: ratelimit-docs
      - name: inflightreq-docs
      - name: sec-headers-docs
    match: Host(`wiki.yuki.es`) || Host(`wiki4.yukics.net`) || Host(`docs.yuki.es`) || Host(`docs.yukics.net`)
    services:
    - kind: Service
      name: docs-nginx-service
      namespace: docs
      passHostHeader: true
      port: 8080
    observability:
      accessLogs: true
      traceVerbosity: minimal
