kubernetes/networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: docs-nginx-network-policy
spec:
  podSelector:
    matchLabels:
      app: docs-nginx
  policyTypes:
  - Egress
  egress:
  - {}
